examples/pts/pos/nestedWildcards.effekt
def f(x: _): Int = {
    val y: _ = x
    y
}

def main() = {
    ()
}