examples/pts/neg/externResource.effekt
extern resource test: _

def main() = {
    ()
}